feat(equipment): 新增設備位置資訊與圖片上傳功能
- 後端：新增 Equipment 位置欄位(區/櫃/號)與圖片上傳，Transaction 新增圖片紀錄
- 前端：更新設備管理與借用頁面，支援拍照/上傳圖片
- 部署：將 MEDIA_URL 改為 /api/media/ 以修復 Cloudflare Tunnel 圖片載入問題

--- a/tunnel_config.yml
+++ b/tunnel_config.yml
@@ -1,15 +1,9 @@
 tunnel: f2881b4d-72d0-466b-ae6c-44cbc0ba3ca0
-# credentials-file: /etc/cloudflared/creds.json # We use token env var now
+# We rely on Vite Proxy to route /api (including /api/media) to the backend container.
+# This simplifies the tunnel configuration and ensures consistency.
 
 ingress:
-  # Route API requests to the backend container
-  - hostname: qrems.raylei-lab.com
-    path: /api*
-    service: http://backend:8000
-  
-  # Route everything else to the frontend container
   - hostname: qrems.raylei-lab.com
     service: http://frontend:5173
   
-  # Catch-all
   - service: http_status:404
