feat(backend): 整合 Cloudflare R2 儲存、強化安全性與延長 Token 效期
- 儲存方案 (Storage):
    - 整合 `django-storages` 與 `boto3`，支援 Cloudflare R2 Object Storage
    - 修改 `settings.py` 支援 `USE_S3` 環境變數切換
    - 修正 `EquipmentSerializer` 以支援圖片上傳並正確回傳 R2 公開網址
- 安全性 (Security):
    - 強制生產環境檢查 `SECRET_KEY`
    - 啟用 HSTS, Secure Cookies, X-Frame-Options 等安全標頭
    - 限制 `ALLOWED_HOSTS` 預設值
- 認證 (Auth):
    - 延長 JWT Access Token 至 60 分鐘，Refresh Token 至 7 天
    - 新增 `token/refresh/` API 端點
- 依賴 (Deps):
    - 新增 `django-storages[s3]` 與 `boto3`

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,11 @@ SECRET_KEY=replace-me-in-production
 ALLOWED_HOSTS=localhost,127.0.0.1
 DATABASE_URL=postgres://user:password@db:5432/dbname
 FRONTEND_URL=http://localhost:5173
+
+# Storage Configuration (Cloudflare R2 / AWS S3)
+USE_S3=False
+AWS_ACCESS_KEY_ID=your_access_key_id
+AWS_SECRET_ACCESS_KEY=your_secret_access_key
+AWS_STORAGE_BUCKET_NAME=your_bucket_name
+AWS_S3_ENDPOINT_URL=https://<account_id>.r2.cloudflarestorage.com
+# AWS_S3_CUSTOM_DOMAIN=cdn.example.com (Optional)
