--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "google-auth>=2.43.0",
     "requests>=2.32.5",
     "django-cors-headers>=4.9.0",
+    "django-storages[s3]>=1.14.6",
+    "boto3>=1.42.25",
 ]
 
 [tool.uv]
