test: 強化測試覆蓋率並建立前端測試環境
- 後端 (Backend):
    - 將測試覆蓋率提升至約 83%。
    - 新增 ray root, , ,  等核心應用的單元/整合測試。
    - 整合  工具至  (>>> Running Backend Tests with Coverage...
docker-compose exec backend uv run coverage run manage.py test
Found 20 test(s).
System check identified no issues (0 silenced).
>>> Generating Coverage Report...
docker-compose exec backend uv run coverage report
Name                               Stmts   Miss  Cover   Missing
----------------------------------------------------------------
apps/equipment/admin.py               16      0   100%
apps/equipment/apps.py                 4      0   100%
apps/equipment/models.py              50      3    94%   15, 85, 98
apps/equipment/serializers.py         46      4    91%   58-59, 72, 79
apps/equipment/services.py            34      7    79%   37-39, 44-51
apps/equipment/urls.py                 7      0   100%
apps/equipment/views.py              102     22    78%   19, 50-51, 68, 72, 74, 76, 78-90, 92, 129
apps/locations/admin.py               10      1    90%   11
apps/locations/apps.py                 6      0   100%
apps/locations/models.py              18      0   100%
apps/locations/serializers.py         14      0   100%
apps/locations/urls.py                 6      0   100%
apps/locations/views.py               18      7    61%   14-21
apps/transactions/admin.py             8      0   100%
apps/transactions/apps.py              4      0   100%
apps/transactions/models.py           31      1    97%   81
apps/transactions/serializers.py      24      5    79%   27, 32-35
apps/transactions/urls.py              6      0   100%
apps/transactions/views.py           106     27    75%   18-22, 33, 36, 66, 73, 80, 110, 129, 157-178
apps/users/admin.py                    8      0   100%
apps/users/apps.py                     4      0   100%
apps/users/models.py                  16      1    94%   26
apps/users/serializers.py             25      1    96%   26
apps/users/urls.py                     7      0   100%
ap

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,4 +26,21 @@ dependencies = [
 [tool.uv]
 dev-dependencies = [
     "pytest>=8.0",
+    "coverage>=7.0",
 ]
+
+[tool.coverage.run]
+source = ["."]
+omit = [
+    "*/migrations/*",
+    "*/tests.py",
+    "*/test_*.py",
+    "manage.py",
+    "config/*",
+    "fix_borrowed_data.py",
+    "generate_test_data.py",
+]
+
+[tool.coverage.report]
+show_missing = true
+skip_empty = true
