--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.2",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.561.0",
