--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gen:types": "openapi-typescript schema.yaml -o src/types/api.ts"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
@@ -42,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "jsdom": "^27.4.0",
+    "openapi-typescript": "^7.10.1",
     "postcss": "^8.5.6",
     "tailwindcss": "3.4.17",
     "typescript": "~5.9.3",
