fix(ci): 修正前端 Lint 錯誤與後端測試環境依賴缺失
- Frontend:
    - 移除未使用的 Import (LocationTreeItem, BorrowRequests)。
    - 補全 API 方法的型別定義，替換隱式 any。
    - 修復 QRCodeScannerModal 的 useEffect 依賴警告。
- Backend (CI):
    - 在執行測試前增加 `uv sync --dev` 步驟，確保 coverage 等測試工具已安裝於容器中。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
           # Simple wait loop for postgres
           timeout 60s sh -c 'until docker-compose exec -T db pg_isready -U postgres; do sleep 2; done'
 
+      - name: Install Dev Dependencies
+        run: docker-compose exec -T backend uv sync --dev
+
       - name: Run Backend Tests
         # Using -T to disable pseudo-tty allocation which is not available in CI
         run: docker-compose exec -T backend uv run coverage run manage.py test
