fix: 修正 CI 執行路徑與前端 Lint 錯誤
- CI (Backend): 使用絕對路徑 `/bin/uv` 執行指令，解決在某些 Runner 環境下找不到 uv 的問題 (Exit code 127)。
- Frontend:
    - 修正 `DispatchRequests`, `CategoryManagement`, `EquipmentBulkDeletePage` 中的 any 型別。
    - 移除未使用的變數與導入。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,14 +34,14 @@ jobs:
           timeout 60s sh -c 'until docker-compose exec -T db pg_isready -U postgres; do sleep 2; done'
 
       - name: Install Dev Dependencies
-        run: docker-compose exec -T backend uv sync --dev
+        run: docker-compose exec -T backend /bin/uv sync --dev
 
       - name: Run Backend Tests
         # Using -T to disable pseudo-tty allocation which is not available in CI
-        run: docker-compose exec -T backend uv run coverage run manage.py test
+        run: docker-compose exec -T backend /bin/uv run coverage run manage.py test
 
       - name: Show Coverage Report
-        run: docker-compose exec -T backend uv run coverage report
+        run: docker-compose exec -T backend /bin/uv run coverage report
 
       - name: Dump Docker Logs on Failure
         if: failure()
