chore: add husky and lint-staged for pre-commit checks

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ Thumbs.db
 # Context
 GEMINI.md
 frontend/.pnpm-store/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
