--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,21 +6,22 @@ services:
       - POSTGRES_DB=qrems
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=dev_secret
-    ports:
-      - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_prod:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
       timeout: 5s
       retries: 5
 
   backend:
-    build: ./backend
-    command: sh -c "uv run python manage.py migrate && uv run python manage.py runserver 0.0.0.0:8000"
-    volumes:
-      - ./backend:/app
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.prod
+    # Gunicorn command is already in Dockerfile.prod CMD, but we need to run migrations first?
+    # In prod, usually we run migrations as a separate step or entrypoint script.
+    # For simplicity here, we can override command to migrate then run.
+    command: sh -c "uv run python manage.py migrate && uv run gunicorn config.wsgi:application --bind 0.0.0.0:8000"
     ports:
       - "8000:8000"
     depends_on:
@@ -30,19 +31,16 @@ services:
       - ./backend/.env
     environment:
       - DATABASE_URL=postgres://postgres:dev_secret@db:5432/qrems
-      # Override FRONTEND_URL for docker context if needed, but localhost usually works for browser redirect 
+      - DEBUG=False
+      # Ensure allowed hosts includes localhost for testing
+      - ALLOWED_HOSTS=localhost,127.0.0.1,backend,qrems.raylei-lab.com
 
   frontend:
-    build: ./frontend
-    volumes:
-      - ./frontend:/app
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.prod
     ports:
-      - "5173:5173"
-    env_file:
-      - ./frontend/.env
-    environment:
-      # In Docker, frontend dev server proxy needs to verify the backend host name
-      - VITE_API_TARGET=http://backend:8000
+      - "80:80"
     depends_on:
       - backend
 
@@ -53,10 +51,10 @@ services:
       - TUNNEL_TOKEN=eyJhIjoiNjIwZTA2ZmI5NzI5Y2ZmMWE2YzNlMWQ4YzQ3Mzk1MDMiLCJ0IjoiZjI4ODFiNGQtNzJkMC00NjZiLWFlNmMtNDRjYmMwYmEzY2EwIiwicyI6IjVaVldhVDZ3NFFlZENtOXlMYkhwclA0MjlPRUdoelhZSlVrZEM1cEpxRkk9In0=
     command: tunnel run
     volumes:
-      - ./tunnel_config.yml:/etc/cloudflared/config.yml
+      - ./tunnel_config.prod.yml:/etc/cloudflared/config.yml
     depends_on:
       - frontend
       - backend
 
 volumes:
-  postgres_data:
+  postgres_data_prod:
