build: 优化部署配置与静态资源处理
- 后端：
  - 完善 EquipmentSerializer 图片上传处理逻辑
  - 修正 STATIC_URL 配置，重命名管理后台路径为 /django_admin
- 前端/Nginx：
  - 统一容器端口为 80
  - Nginx 增加 /static/ 路径映射，适配 Django 静态文件
  - 更新 Docker 构建参数传递 VITE 环境变量
- 运维：
  - 更新 docker-compose 配置，增加 static_volume 数据卷
  - 调整 Cloudflared tunnel 配置适配新端口与域名
  - 更新 lint-staged 使用 Docker 运行后端代码校验

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
       "bash -c 'pnpm --prefix frontend tsc -b'"
     ],
     "backend/**/*.py": [
-      "bash -c 'cd backend && uv run ruff check --fix'",
-      "bash -c 'cd backend && uv run ruff format'"
+      "bash -c 'docker compose run --rm backend uv run ruff check --fix'",
+      "bash -c 'docker compose run --rm backend uv run ruff format'"
     ]
   },
   "devDependencies": {
