--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,12 +21,14 @@ services:
     # Gunicorn command is already in Dockerfile.prod CMD, but we need to run migrations first?
     # In prod, usually we run migrations as a separate step or entrypoint script.
     # For simplicity here, we can override command to migrate then run.
-    command: sh -c "uv run python manage.py migrate && uv run gunicorn config.wsgi:application --bind 0.0.0.0:8000"
+    command: sh -c "uv run python manage.py collectstatic --noinput && uv run python manage.py migrate && uv run gunicorn config.wsgi:application --bind 0.0.0.0:8000"
     ports:
       - "8000:8000"
     depends_on:
       db:
         condition: service_healthy
+    volumes:
+      - static_volume:/app/staticfiles
     env_file:
       - ./backend/.env
     environment:
@@ -39,10 +41,16 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.prod
+      args:
+        VITE_GOOGLE_CLIENT_ID: ${VITE_GOOGLE_CLIENT_ID}
+        VITE_API_BASE_URL: ${VITE_API_BASE_URL:-/api/v1}
+        VITE_API_TARGET: ${VITE_API_TARGET:-http://127.0.0.1:8000}
     ports:
       - "80:80"
     depends_on:
       - backend
+    volumes:
+      - static_volume:/app/staticfiles:ro
 
   tunnel:
     image: cloudflare/cloudflared:latest
@@ -58,3 +66,4 @@ services:
 
 volumes:
   postgres_data_prod:
+  static_volume:
