--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,15 +1,7 @@
 node_modules
+.pnpm-store
 dist
 .git
-.github
-.vscode
-.idea
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-.env.local
-.env.*.local
+.gitignore
+.env
 .DS_Store
-coverage
