--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -9,6 +9,14 @@ RUN npm install -g pnpm && pnpm install --frozen-lockfile
 
 # Copy source and build
 COPY . .
+# Vite requires VITE_ environment variables at build time
+ARG VITE_GOOGLE_CLIENT_ID
+ARG VITE_API_BASE_URL
+ARG VITE_API_TARGET
+ENV VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+ENV VITE_API_TARGET=$VITE_API_TARGET
+
 RUN pnpm build
 
 # Stage 2: Serve
