--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,6 +14,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Django Static Files
+    location /static/ {
+        alias /app/staticfiles/;
+    }
+
     # Backend API Proxy
     location /api {
         proxy_pass http://backend:8000;
@@ -24,7 +29,7 @@ server {
     }
 
     # Django Admin Proxy
-    location /admin {
+    location /django_admin {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
